--- a/frontend/stu-co-react/src/components/Components/Calculator/Calculator.css
+++ b/frontend/stu-co-react/src/components/Components/Calculator/Calculator.css
@@ -13,7 +13,7 @@
     padding: 5vh;
     border-radius: 10px;
     box-shadow: 0 0 20px #f8f8f85a;
-    background-color: rgb(0, 0, 0);
+    background-color: rgb(0, 0, 0, 0.6);
     z-index: 3;
   }
 
