--- a/frontend/stu-co-react/src/components/Components/Converter/Converter.css
+++ b/frontend/stu-co-react/src/components/Components/Converter/Converter.css
@@ -9,7 +9,7 @@
     text-align: center;
     position: absolute;
     box-shadow: 0 0 20px #f8f8f85a;
-    background-color: rgb(0, 0, 0);
+    background-color: rgba(0, 0, 0, 0.6);
     z-index: 3;
 }
 #conv select option{
