--- a/frontend/stu-co-react/src/components/Components/Header/header.css
+++ b/frontend/stu-co-react/src/components/Components/Header/header.css
@@ -2,16 +2,27 @@
   position: fixed;
   margin-top: 0%;
   top: 0;
-  right: 0;
+  right: 10px;
   height: auto;
   width: 8%;
   z-index: 999;
-  background: rgba(0, 0, 0, 0.411);
+  background: rgba(0, 0, 0, 0);
   flex-direction: column;
   align-items: flex-start;
   justify-content: flex-start;
   display: flex; 
    padding-top: 2em;
+}
+
+@media only screen and (max-width: 780px){
+  #head0{
+    bottom: 0;
+    top: 90%;
+    left: 40%;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+  }
 }
 
 /* #head0.animated-open {
@@ -25,7 +36,7 @@
 
 #head0 li {
   margin-top: 10%;
-  margin-left: 3%;
+  margin-left: 0px;
   list-style: none;
   width: 100%;
   height: 50px;
@@ -37,6 +48,11 @@
 
 #head0 li img{
   height: 50px;
+  transition: 1s;
+}
+
+#head0 li img:hover{
+  transform: scale(1.1);
 }
 
 /* .menuIcon img,
