--- a/frontend/stu-co-react/src/components/Components/ToDo/todo.css
+++ b/frontend/stu-co-react/src/components/Components/ToDo/todo.css
@@ -9,7 +9,7 @@
     display:flex;
     flex-direction: column;
     box-shadow: 0 0 20px #f8f8f85a;
-    background-color: rgb(0, 0, 0);
+    background-color: rgba(0, 0, 0, 0.6);
     z-index: 3;
 }
 #todolist{
@@ -33,13 +33,14 @@
     padding-left: 15px;
 }
 
+
 .task-input{
     height: 10vh;
     font-size: 1.2em;
     width:100%;
     border: none;
     text-align: center;
-    color: white;
+    color: black;
     border-radius: 10vh;
     padding-right: 15px;
     padding-left: 15px;
@@ -56,6 +57,10 @@
     width: 20px;
     height: auto;
     cursor: pointer;
+}
+
+.task-input ::placeholder{
+    color: black
 }
 
 .todoimg{
@@ -81,4 +86,15 @@
 
 #todoList li{
     padding: 10px;
+    cursor: pointer;
+}
+
+/* #todolist input{
+    position: absolute;
+    right: 10%;
+    margin-top: 5px;
+} */
+
+.done{
+    text-decoration: line-through;
 }
