--- a/frontend/stu-co-react/src/components/Pages/Home/Login.css
+++ b/frontend/stu-co-react/src/components/Pages/Home/Login.css
@@ -27,7 +27,7 @@
     text-decoration-line:none ;
 } */
 
-#Alogo video{
+.Alogo video{
     border-radius:50%;
     border: 0px solid #0F0F31;
     margin-left: 0%;
@@ -40,7 +40,7 @@
 }
 
 form{
-    height: 520px;
+    height: auto;
     width: 400px;
     background-color: rgba(255, 255, 255, 0);
     position: absolute;
@@ -141,4 +141,55 @@ label{
     text-shadow: 3px 3px black;
     position: relative;
 } */
+
+#signUp{
+    height: 100vh;
+    width: 100vw;
+    /* background-color: rgb(0, 29, 54); */
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-image: url('../../../assets/loginbg.jpg');
+    background-size: cover;
+    background-repeat: no-repeat;
+}
+
+
+.l_message{
+    height: auto;
+    width: 97%;
+    color: white;
+    background-color: rgba(0, 0, 0, 0.562);
+    border-radius: 3px;
+    padding: 10px;
+    margin-top: 8px;
+    font-size: 17px;
+    font-weight: 300;
+}
+
+label{
+    font-size: 1.1em;
+    font-family: 'Franklin Gothic', 'Arial Narrow', Arial, sans-serif;
+}
             
+#signUp form{
+    width: 500px;
+    margin: 1%;
+}
+
+#signUp form h3{
+    padding-bottom: 0em;
+
+}
+
+#signin-btn{
+    margin-top: 10px;
+    width: 100%;
+    background-color: #ffbf00;;
+    color: #000000;
+    padding: 15px 0;
+    font-size: 18px;
+    font-weight: 600;
+    border-radius: 5px;
+    cursor: pointer;
+}
