--- a/frontend/stu-co-react/src/css/App.css
+++ b/frontend/stu-co-react/src/css/App.css
@@ -16,6 +16,7 @@ body {
     /* overflow:hidden; */
     min-height: 98vh;
     max-width: 100vw;
+    min-width: 50%;
     overflow-y: visible;
     overflow-x: visible;
 } 
